[tool.poetry]
name = "ml_api"
version = "0.1.0"
description = "ML API for prediction"
authors = ["Diya Dileep <diyadileep0806@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
tensorflow-cpu = "2.10.0"
numpy = "^1.24.0"
Pillow = "^9.0.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
